# bot-hoven-ros

./: .gitignore  README.md  logging.txt  shutdown.sh  startup.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/dev/: Dockerfile  devcontainer.json
.devcontainer/prod/: Dockerfile  devcontainer.json
scripts/: clean_build_and_run.sh  robotic_controller_perf_metric_cpu_load.sh  shutdown.sh  startup.sh
scripts/chrt/: chrt_launch_hardware.sh  chrt_run_hardware_tests.sh
src/bothoven_description/: package.xml  setup.cfg  setup.py
src/bothoven_description/launch/: gazebo.launch.py
src/bothoven_description/urdf/: bothoven.urdf
src/cl42t_hardware/: CMakeLists.txt  cl42t_hardware.xml  package.xml
src/cl42t_hardware/include/cl42t_hardware/cl42t_hardware/: cl42t.hpp
src/cl42t_hardware/src/: cl42t.cpp
src/description/: package.xml  setup.py
src/description/description/: bothoven_core.xacro  common.xacro  gazebo_control.xacro  ros2_control.xacro
src/description/launch/: gazebo.launch.py  rsp.launch.py
src/description/models/bothoven/: model.config  model.sdf
src/description/resource/: gazebo_config.config  rviz2_config.rviz
src/description/urdf/: bothoven.urdf.xacro
src/description/worlds/: bothoven_world.sdf
src/finger_control/: package.xml  setup.cfg  setup.py
src/finger_control/finger_control/: finger_control_node.py
src/finger_control/launch/: finger_control.launch.py
src/hand_control/: package.xml  setup.py
src/hand_control/hand_control/: hand_control_node.py
src/hand_control/launch/: hand_control.launch.py
src/hand_control/test/: test_hand_position_comms.py
src/hardware/: CMakeLists.txt  PiPCA9685.xml  README.md  hardware.xml  package.xml  pca9685_hardware_interface.xml
src/hardware/config/: controllers.yaml
src/hardware/examples/: example_jtc.cpp
src/hardware/include/: hardware_common.hpp
src/hardware/include/hardware/: bothoven_hardware.hpp  cl42t.hpp
src/hardware/include/hardware/cl42t/: cl42t_comm.h  cl42t_system.hpp  visibility_control.h
src/hardware/include/hardware/common/: Constants.h
src/hardware/include/hardware/i2c/: I2CBusManager.hpp  I2CPeripheral.h
src/hardware/include/hardware/mcp23017/: mcp23017_comm.h  mcp23017_constants.h  mcp23017_system.hpp  visibility_control.h
src/hardware/include/hardware/pca9685/: Constants.h  pca9685_comm.h  pca9685_constants.h  pca9685_system.hpp  visibility_control.h
src/hardware/include/hardware/spi/: SPIPeripheral.h
src/hardware/launch/: hardware.launch.py
src/hardware/src/: I2CPeripheral.cpp  bothoven_hardware.cpp  cl42t.cpp  pca9685_comm.cpp
src/hardware/src/cl42t/: cl42t_comm.cpp  cl42t_system.cpp
src/hardware/src/i2c/: I2CBusManager.cpp  I2CPeripheral.cpp
src/hardware/src/mcp23017/: mcp23017_comm.cpp  mcp23017_system.cpp
src/hardware/src/pca9685/: pca9685_comm.cpp  pca9685_system.cpp
src/hardware/src/spi/: SPIPeripheral.cpp
src/hardware/test/: robotic_controller_goal_receival_test.cpp  robotic_controller_performance_metric.cpp  single_finger_test.cpp  switch_monitor.cpp
src/hardware/urdf/: left_servo_joints.xacro  left_solenoid_joints.xacro  left_stepper_joint.xacro  right_servo_joints.xacro  right_solenoid_joints.xacro  right_stepper_joint.xacro  ros2_control.xacro  servo_joints.xacro  solenoid_joints.xacro  stepper_joints.xacro
src/home_position/: package.xml  setup.cfg  setup.py
src/home_position/home_position/: home_position_node.py
src/home_position/launch/: home_position.launch.py
src/pca9685_hardware_interface/include/pca9685_hardware_interface/: pca9685_comm.h  pca9685_system.hpp
src/pca9685_hardware_interface/src/: pca9685_comm.cpp  pca9685_system.cpp
